Calendar: Fixed scrollbar

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,25 +1,24 @@
 .calendarBox {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   width: 80%;
   height: 80%;
-  overflow-y: auto;
   background-color: white;
   border: 1px solid black;
 }
 
 .titleContainer {
+  width: 100%;
   display: flex;
-  position: sticky;
-  top: 0;
+  z-index: 2;
+  height: 35px;
+  padding-right: 8px;
+  border-bottom: 1px solid black;
 }
 
 .titleSpacer {
   display: flex;
   flex: 1;
-  background-color: white;
-  border-bottom: 1px solid black;
   /* box-shadow: inset -1px 0 0 black; */
 }
 
@@ -30,49 +29,51 @@
 
 .dayTitle {
   display: flex;
-  position: sticky;
-  top: 0;
   justify-content: center;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  height: 35px;
-  background-color: white;
-  z-index: 1;
-  flex: 1;
-}
-
-.dayTitle:first-child {
   border-left: 1px solid black;
+  flex: 1;
 }
 
 .scheduleContainer {
   display: flex;
+  overflow-y: scroll;
+  /* height: 100%; */
+}
+
+.scheduleContainer::-webkit-scrollbar {
+  border-left: 1px solid black;
+  width: 8px;
+}
+
+.scheduleContainer::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 0px;
+}
+
+.scheduleContainer::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 .labelContainer {
   display: flex;
+  align-items: flex-start;
   flex: 1;
 }
 
-.timeLabelContainer {
+.timeLabelColumn {
   display: flex;
   flex-direction: column;
   flex: 10;
-  background-color: white;
-  border-right: none;
-  border-top: none;
 }
 
 .labelConnectorColumn {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background-color: white;
 }
 
 .labelConnector {
   display: flex;
-  flex-grow: 1;
   border-bottom: 1px solid lightgray;
   height: 60px;
 }
@@ -83,24 +84,19 @@
 
 .dayContainer {
   display: flex;
+  align-items: flex-start;
   flex: 14;
 }
 
 .dayColumn {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
-  height: 100%;
-  flex: 1;
-  background-color: white;
   border-left: 1px solid black;
 }
 
-/* .dayColumn:first-child {
+.dayColumn:first-child {
   border-left: 1px solid lightgray;
-} */
-
-.dayColumn:last-child {
-  border-right: 1px solid black;
 }
 
 .hourLabel {
@@ -113,11 +109,7 @@
 .hourLabel p {
   padding-right: 5px;
   display: flex;
-  align-items: center;
   font-size: x-small;
-  margin: 0;
-  text-align: center;
-  height: 100%;
 }
 
 .labelSpacer {
@@ -130,10 +122,10 @@
   height: 60px;
 }
 
-.hour:hover {
-  background-color: rgb(209, 209, 209);
-}
-
 .hour:last-child {
   border-bottom: none;
+}
+
+.hour:hover {
+  background-color: rgb(209, 209, 209);
 }
